# py-presscart

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: api-fidelity-reviewer.md  pydantic-model-auditor.md
.claude/rules/: dual-mode-invariant.md  library-hygiene.md  no-claude-coauthor.md
.claude/skills/add-endpoint/: SKILL.md
.claude/skills/add-resource/: SKILL.md
.claude/skills/regen-docs-snapshot/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  README.md  api-reference.md  authentication-and-scopes.md  changelog.md  client-configuration.md  conf.py  contributing.md  dual-mode.md  error-handling.md  getting-started.md  index.md  installation.md  make.bat  models-reference.md  pagination.md  recipes.md  requirements.txt  resource-articles.md  resource-auth.md  resource-campaigns.md  resource-files.md  resource-folders.md  resource-order-items.md  resource-orders.md  resource-outlets.md  resource-products.md  resource-profiles.md  retry-and-timeouts.md  testing-status.md
examples/: quickstart.py
src/pypresscart/: __init__.py  _transport.py  client.py  exceptions.py
src/pypresscart/models/: __init__.py  _common.py  articles.py  auth.py  campaigns.py  files.py  folders.py  order_items.py  orders.py  outlets.py  products.py  profiles.py
src/pypresscart/resources/: __init__.py  _base.py  articles.py  auth.py  campaigns.py  files.py  folders.py  order_items.py  orders.py  outlets.py  products.py  profiles.py
tests/: conftest.py  test_auth.py  test_campaigns.py  test_client.py  test_dual_mode.py  test_exceptions.py  test_files_folders.py  test_orders.py  test_outlets.py  test_profiles_products_articles.py
tests/integration/: .env.local.example  README.md  conftest.py  test_articles.py  test_auth.py  test_campaigns.py  test_files.py  test_folders.py  test_orders.py  test_outlets.py  test_products.py  test_profiles.py
