[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypresscart"
version = "0.1.2"
description = "Unofficial Python client for the Presscart API."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "pypresscart contributors" }]
keywords = ["presscart", "pypresscart", "pr", "media", "api", "sdk", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7,<3",
    "requests>=2.31,<3",
]

[project.urls]
Documentation = "https://docs.presscart.com"
Issues = "https://github.com/pypresscart/py-presscart/issues"
Source = "https://github.com/pypresscart/py-presscart"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "responses>=0.25",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
    "pre-commit>=4",
    "build",
    "twine",
]
docs = [
    "sphinx>=7,<9",
    "shibuya>=2025.4",
    "myst-parser>=3",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "sphinx-autobuild>=2024.10",
    "linkify-it-py>=2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pypresscart"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pypresscart",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # flake8-bugbear
    "UP",        # pyupgrade
    "N",         # pep8-naming
    "SIM",       # flake8-simplify
    "RUF",       # ruff-specific
]
ignore = [
    "E501",      # handled by formatter
    "N818",      # exception names without "Error" suffix (we keep builtin-aligned names)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
# RUF012: mutable defaults are safe inside Pydantic BaseModel subclasses.
"src/pypresscart/models/*" = ["RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["pypresscart"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]
markers = [
    "integration: hits the live Presscart API. Requires PRESSCART_API_TOKEN; auto-skips otherwise. Run with `pytest -m integration` (or the whole suite; they self-skip).",
]

[tool.coverage.run]
source = ["pypresscart"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 75

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
files = ["src/pypresscart"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
